--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/apartment
+spring.datasource.url=jdbc:MySQL://localhost:3306/apartmentmapp
 spring.datasource.username=root
-spring.datasource.password=Gnaoh0403ss!@
-
+spring.datasource.password=Canh2005SQL@@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+server.port=8080
 
 
 spring.mail.host=smtp.gmail.com
