--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.datasource.url=jdbc:MySQL://localhost:3306/apartmentmapp
-spring.datasource.username=root
-spring.datasource.password=Canh2005SQL@@
+#spring.datasource.url=jdbc:MySQL://localhost:3306/apartmentmapp
+#spring.datasource.username=root
+#spring.datasource.password=Canh2005SQL@@
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://mysql-17e793ae-hoang-8ea5.l.aivencloud.com:25995/apartment?ssl-mode=REQUIRED
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_a_SvauiNMH7GzLs7h22
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
