xong phần đóng góp cho quản lý - sửa trực tiếp trong bảng

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.mail.username=atuan.nh2810@gmail.com
 spring.mail.password=vsyk svcr qaci sikb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+logging.level.root=info
+logging.level.org.springframework=warn
+logging.file.name=app.log
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
