--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.datasource.url=jdbc:MySQL://localhost:3306/apartmentmapp
-spring.datasource.username=root
-spring.datasource.password=Canh2005SQL@@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-#spring.datasource.url=jdbc:mysql://mysql-17e793ae-hoang-8ea5.l.aivencloud.com:25995/apartment?ssl-mode=REQUIRED
-#spring.datasource.username=avnadmin
-#spring.datasource.password=AVNS_a_SvauiNMH7GzLs7h22
+#spring.datasource.url=jdbc:MySQL://localhost:3306/apartmentmapp
+#spring.datasource.username=root
+#spring.datasource.password=Canh2005SQL@@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://mysql-17e793ae-hoang-8ea5.l.aivencloud.com:25995/apartment?ssl-mode=REQUIRED
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_a_SvauiNMH7GzLs7h22
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 server.port=8080
 
@@ -20,7 +20,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-logging.level.root=info
-logging.level.org.springframework=warn
-logging.file.name=app.log
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+#logging.level.root=info
+#logging.level.org.springframework=warn
+#logging.file.name=app.log
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
