--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>javafx-web</artifactId>
             <version>21</version>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.3</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.openjfx</groupId>
