sửa lại user xác nhận thanh toán

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#spring.datasource.url=jdbc:MySQL://localhost:3306/apartment
+#spring.datasource.url=jdbc:MySQL://localhost:3306/apartmentmapp
 #spring.datasource.username=root
-#spring.datasource.password=Gnaoh0403ss!@
+#spring.datasource.password=Canh2005SQL@@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://mysql-17e793ae-hoang-8ea5.l.aivencloud.com:25995/apartment?ssl-mode=REQUIRED
